fixed input alignment

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -353,7 +353,7 @@ form input {
     box-shadow: #ccc -1px -1px 0px;
     color: #606060;
     font-size: 20px;
-    margin: 5px 0px 0px 15px;
+    margin: 10px 0px 0px 15px;
     padding: 5px;
     width: 85%;
 }
